fixed navbar overlapping

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -39,3 +39,9 @@
   background: $white;
   color: $blue;
 }
+
+
+body {
+  min-height: 100vh;
+  margin-top: 100px;
+}
